<resources>
    <string name="app_name">Coffee Chat</string>

    <string name="btn_logar">Login</string>
    <string name="btn_cadastrar">Sign Up</string>
    <string name="username">User Name</string>
    <string name="login">Login</string>
    <string name="casastro">Create Account</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="confirmarsenha">Confirme sua Senha</string>
    <string name="not_account">Não tenho Conta</string>
    <string name="tenhoconta">Já tenho Conta</string>

    <string name="nameuser">@username</string>
    <string name="enviar">Enviar</string>
    <string name="hintTextBoxCriarPost">O que esta acontecendo?</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic</string>
    <string name="creator_post_btn_get_out_activity">Sair do Activity</string>
    <string name="creator_post_txt_nicknameuser">NicknameUser</string>
    <string name="creator_post_txt_nameuser">\@nameuser</string>
</resources>