<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        tools:context=".CreatorPostActivity">

        <TextView
            android:id="@+id/txtNickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/creator_post_txt_nicknameuser"
            android:textColor="@color/verde_esmeralda"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/edtMessagePost"
            app:layout_constraintTop_toBottomOf="@+id/btnClose" />

        <TextView
            android:id="@+id/txtNameuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/creator_post_txt_nameuser"
            android:textColor="@color/marrom_escuro"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/txtNickname"
            app:layout_constraintStart_toEndOf="@+id/txtNickname" />

        <EditText
            android:id="@+id/edtMessagePost"
            style="@style/EditTextArea"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:textSize="18sp"
            android:maxLines="10"
            android:minLines="5"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtNickname"
            android:hint="@string/hintTextBoxCriarPost" />

        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_btn_send_ripple_effect"
            android:drawableStart="@drawable/vec_ic_caneca"
            android:drawablePadding="14dp"
            android:paddingStart="14dp"
            android:paddingEnd="20dp"
            android:text="@string/enviar"
            android:textColor="@color/branco_default"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/btnClose"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnClose"
            app:layout_constraintTop_toTopOf="@+id/btnClose" />

        <ImageButton
            android:id="@+id/btnClose"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:padding="4dp"
            android:background="@color/transparent"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toStartOf="@+id/btnEnviar"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/vec_close_24"
            android:contentDescription="@string/creator_post_btn_get_out_activity"/>

        <TextView
            android:id="@+id/txtAmountChars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:text="0"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>