<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_cadastro_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_btn_login_ripple"
            android:text="@string/btn_cadastrar"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/txt_cadastro_link_tologin"
            app:layout_constraintEnd_toEndOf="@+id/edt_cadastro_senha"
            app:layout_constraintStart_toStartOf="@+id/edt_cadastro_senha"
            app:layout_constraintTop_toBottomOf="@+id/edt_cadastro_senha" />

        <TextView
            android:id="@+id/txt_cadastro_link_tologin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tenhoconta"
            android:textStyle="bold"
            android:textColor="@color/marrom_escuro"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btn_cadastro_signup"
            app:layout_constraintStart_toStartOf="@+id/btn_cadastro_signup"
            app:layout_constraintTop_toBottomOf="@+id/btn_cadastro_signup" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:text="@string/casastro"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/verde_esmeralda"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/username"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/marrom_escuro"
            app:layout_constraintBottom_toTopOf="@+id/edt_cadastro_username"
            app:layout_constraintStart_toStartOf="@+id/edt_cadastro_username"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <EditText
            android:id="@+id/edt_cadastro_username"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_login_edittxt"
            android:ems="10"
            android:paddingLeft="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/email"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/marrom_escuro"
            app:layout_constraintBottom_toTopOf="@+id/edt_cadastro_email"
            app:layout_constraintStart_toStartOf="@+id/edt_cadastro_email"
            app:layout_constraintTop_toBottomOf="@+id/edt_cadastro_username" />

        <EditText
            android:id="@+id/edt_cadastro_email"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/bg_login_edittxt"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:paddingStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="@+id/edt_cadastro_username"
            app:layout_constraintStart_toStartOf="@+id/edt_cadastro_username"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/senha"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/marrom_escuro"
            app:layout_constraintBottom_toTopOf="@+id/edt_cadastro_senha"
            app:layout_constraintStart_toStartOf="@+id/edt_cadastro_senha"
            app:layout_constraintTop_toBottomOf="@+id/edt_cadastro_email" />

        <EditText
            android:id="@+id/edt_cadastro_senha"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/bg_login_edittxt"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_cadastro_signup"
            app:layout_constraintEnd_toEndOf="@+id/edt_cadastro_email"
            app:layout_constraintStart_toStartOf="@+id/edt_cadastro_email"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>